--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "gsap": "^3.12.5",
     "next": "^14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
@@ -21,7 +23,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/parser": "5.0.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.2.3",
     "prettier": "^3.1.0",
