--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@mantine/core": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@tabler/icons-react": "^3.11.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "gsap": "^3.12.5",
     "next": "^14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
